--- a/AAAMLP/c3.ipynb
+++ b/AAAMLP/c3.ipynb
@@ -899,6 +899,206 @@
     "of components. You can fit any of these on sparse matrix obtained from\n",
     "CountVectorizer or TfidfVectorizer."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['the', ',', '.', 'a', 'and']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from sklearn import decomposition\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "# create a corpus of sentences\n",
+    "# we read only 10k samples from training data\n",
+    "# for this example\n",
+    "corpus = pd.read_csv(\"./imdb/IMDB Dataset.csv\", nrows=10000)\n",
+    "corpus = corpus.review.values\n",
+    "# initialize TfidfVectorizer with word_tokenize from nltk\n",
+    "# as the tokenizer\n",
+    "tfv = TfidfVectorizer(tokenizer=word_tokenize, token_pattern=None)\n",
+    "# fit the vectorizer on corpus\n",
+    "tfv.fit(corpus)\n",
+    "# transform the corpus using tfidf\n",
+    "corpus_transformed = tfv.transform(corpus)\n",
+    "# initialize SVD with 10 components\n",
+    "svd = decomposition.TruncatedSVD(n_components=10)\n",
+    "# fit SVD\n",
+    "corpus_svd = svd.fit(corpus_transformed)\n",
+    "# choose first sample and create a dictionary\n",
+    "# of feature names and their scores from svd\n",
+    "# you can change the sample_index variable to\n",
+    "# get dictionary for any other sample\n",
+    "sample_index = 0\n",
+    "feature_scores = dict(\n",
+    "    zip(\n",
+    "        tfv.get_feature_names_out(),\n",
+    "        corpus_svd.components_[sample_index]\n",
+    "    )\n",
+    ")\n",
+    "# once we have the dictionary, we can now\n",
+    "# sort it in decreasing order and get the\n",
+    "# top N topics\n",
+    "N = 5\n",
+    "print(sorted(feature_scores, key=feature_scores.get, reverse=True)[:N])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.36499632e-05,  7.54662397e-01,  5.80854763e-03, ...,\n",
+       "        2.54111607e-04,  3.16457081e-05,  9.52717338e-05])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus_svd.components_[sample_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['the', ',', '.', 'a', 'and']\n",
+      "['br', '<', '>', '/', '-']\n",
+      "['i', 'movie', '!', 'it', 'was']\n",
+      "[',', '!', \"''\", '``', 'you']\n",
+      "['!', 'the', \"''\", '``', '...']\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 5\n",
+    "for sample_index in range(5):\n",
+    "    feature_scores = dict(\n",
+    "        zip(\n",
+    "            tfv.get_feature_names_out(),\n",
+    "            corpus_svd.components_[sample_index]\n",
+    "        )\n",
+    "    )\n",
+    "    print(\n",
+    "        sorted(\n",
+    "            feature_scores,\n",
+    "            key=feature_scores.get,\n",
+    "            reverse=True\n",
+    "        )[:N]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "去掉特殊符号和空格，还可以去掉stop words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import string\n",
+    "def clean_text(s):\n",
+    "    \"\"\"\n",
+    "    This function cleans the text a bit\n",
+    "    :param s: string\n",
+    "    :return: cleaned string\n",
+    "    \"\"\"\n",
+    "    # split by all whitespaces\n",
+    "    s = s.split()\n",
+    "    # join tokens by single space\n",
+    "    # why we do this?\n",
+    "    # this will remove all kinds of weird space\n",
+    "    # \"hi.   how are you\" becomes\n",
+    "    # \"hi. how are you\"\n",
+    "    s = \" \".join(s)\n",
+    "    # remove all punctuations using regex and string module\n",
+    "    s = re.sub(f'[{re.escape(string.punctuation)}]', '', s)\n",
+    "    # you can add more cleaning here if you want\n",
+    "    # and then return the cleaned string\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a corpus of sentences\n",
+    "# we read only 10k samples from training data\n",
+    "# for this example\n",
+    "corpus = pd.read_csv(\"./imdb/IMDB Dataset.csv\", nrows=10000)\n",
+    "corpus.loc[:, \"review\"] = corpus.review.apply(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['review', 'sentiment']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize TfidfVectorizer with word_tokenize from nltk\n",
+    "# as the tokenizer\n",
+    "tfv = TfidfVectorizer(tokenizer=word_tokenize, token_pattern=None)\n",
+    "# fit the vectorizer on corpus\n",
+    "tfv.fit(corpus)\n",
+    "# transform the corpus using tfidf\n",
+    "corpus_transformed = tfv.transform(corpus)\n",
+    "# initialize SVD with 10 components\n",
+    "svd = decomposition.TruncatedSVD(n_components=2)\n",
+    "# fit SVD\n",
+    "corpus_svd = svd.fit(corpus_transformed)\n",
+    "# choose first sample and create a dictionary\n",
+    "# of feature names and their scores from svd\n",
+    "# you can change the sample_index variable to\n",
+    "# get dictionary for any other sample\n",
+    "sample_index = 0\n",
+    "feature_scores = dict(\n",
+    "    zip(\n",
+    "        tfv.get_feature_names_out(),\n",
+    "        corpus_svd.components_[sample_index]\n",
+    "    )\n",
+    ")\n",
+    "# once we have the dictionary, we can now\n",
+    "# sort it in decreasing order and get the\n",
+    "# top N topics\n",
+    "N = 5\n",
+    "print(sorted(feature_scores, key=feature_scores.get, reverse=True)[:N])"
+   ]
   }
  ],
  "metadata": {
