--- a/AAAMLP/c4.ipynb
+++ b/AAAMLP/c4.ipynb
@@ -87,6 +87,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "通过指定目标函数，来找权重，而不是简单平均"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -258,12 +265,14 @@
     "print(f\"Fold-1: Average prediction AUC = {aucs_fold1[3]}\")\n",
     "# find optimal weights using the optimizer\n",
     "opt = OptimizeAUC()\n",
+    "# 自动找权重，把fold1 当测试集，fold2当验证集。\n",
     "# dont forget to remove the average column\n",
     "opt.fit(fold1_preds[:, :-1], yfold1)\n",
     "opt_preds_fold2 = opt.predict(fold2_preds[:, :-1])\n",
     "auc = metrics.roc_auc_score(yfold2, opt_preds_fold2)\n",
     "print(f\"Optimized AUC, Fold 2 = {auc}\")\n",
     "print(f\"Coefficients = {opt.coef_}\")\n",
+    "\n",
     "opt = OptimizeAUC()\n",
     "opt.fit(fold2_preds[:, :-1], yfold2)\n",
     "opt_preds_fold1 = opt.predict(fold1_preds[:, :-1])\n",
