--- a/AAAMLP/c1.ipynb
+++ b/AAAMLP/c1.ipynb
@@ -2840,12 +2840,14 @@
     "from sklearn import metrics\n",
     "y_true = [0, 1, 2, 0, 1, 2, 0, 2, 2]\n",
     "y_pred = [0, 2, 1, 0, 2, 1, 0, 0, 2]\n",
-    "(macro_precision(y_true, y_pred),\n",
-    "metrics.precision_score(y_true, y_pred, average=\"macro\"),\n",
-    "micro_precision(y_true, y_pred),\n",
-    "metrics.precision_score(y_true, y_pred, average=\"micro\"),\n",
-    "weighted_precision(y_true, y_pred),\n",
-    "metrics.precision_score(y_true, y_pred, average=\"weighted\"))"
+    "(\n",
+    "    macro_precision(y_true, y_pred),\n",
+    "    metrics.precision_score(y_true, y_pred, average=\"macro\"),\n",
+    "    micro_precision(y_true, y_pred),\n",
+    "    metrics.precision_score(y_true, y_pred, average=\"micro\"),\n",
+    "    weighted_precision(y_true, y_pred),\n",
+    "    metrics.precision_score(y_true, y_pred, average=\"weighted\")\n",
+    ")"
    ]
   },
   {
