--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -169,6 +169,345 @@
     "train_data = pd.read_csv(\"./dataset/train.csv\")\n",
     "train_data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Kelly, Mr. James</td>\n",
+       "      <td>male</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>330911</td>\n",
+       "      <td>7.8292</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>893</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>363272</td>\n",
+       "      <td>7.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>894</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Myles, Mr. Thomas Francis</td>\n",
+       "      <td>male</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>240276</td>\n",
+       "      <td>9.6875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>895</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wirz, Mr. Albert</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>315154</td>\n",
+       "      <td>8.6625</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>896</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3101298</td>\n",
+       "      <td>12.2875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Pclass                                          Name     Sex  \\\n",
+       "0          892       3                              Kelly, Mr. James    male   \n",
+       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
+       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
+       "3          895       3                              Wirz, Mr. Albert    male   \n",
+       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
+       "\n",
+       "    Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
+       "0  34.5      0      0   330911   7.8292   NaN        Q  \n",
+       "1  47.0      1      0   363272   7.0000   NaN        S  \n",
+       "2  62.0      0      0   240276   9.6875   NaN        Q  \n",
+       "3  27.0      0      0   315154   8.6625   NaN        S  \n",
+       "4  22.0      1      1  3101298  12.2875   NaN        S  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data = pd.read_csv(\"./dataset/test.csv\")\n",
+    "test_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    549\n",
+       "1    342\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 看标签列分布情况\n",
+    "train_data['Survived'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "根据分布情况，决定使用什么样的cross-validation， k-fold k取多大。使用什么metric来当衡量指标。\n",
+    "数据量并不多，分布没有非常的偏斜。\n",
+    "kfold? AUC?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of distinct elements for column 'PassengerId': 891\n",
+      "Distinct values and their count for column 'PassengerId':\n",
+      "1      1\n",
+      "599    1\n",
+      "588    1\n",
+      "589    1\n",
+      "590    1\n",
+      "      ..\n",
+      "301    1\n",
+      "302    1\n",
+      "303    1\n",
+      "304    1\n",
+      "891    1\n",
+      "Name: PassengerId, Length: 891, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Survived': 2\n",
+      "Distinct values and their count for column 'Survived':\n",
+      "0    549\n",
+      "1    342\n",
+      "Name: Survived, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Pclass': 3\n",
+      "Distinct values and their count for column 'Pclass':\n",
+      "3    491\n",
+      "1    216\n",
+      "2    184\n",
+      "Name: Pclass, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Name': 891\n",
+      "Distinct values and their count for column 'Name':\n",
+      "Braund, Mr. Owen Harris                     1\n",
+      "Boulos, Mr. Hanna                           1\n",
+      "Frolicher-Stehli, Mr. Maxmillian            1\n",
+      "Gilinski, Mr. Eliezer                       1\n",
+      "Murdlin, Mr. Joseph                         1\n",
+      "                                           ..\n",
+      "Kelly, Miss. Anna Katherine \"Annie Kate\"    1\n",
+      "McCoy, Mr. Bernard                          1\n",
+      "Johnson, Mr. William Cahoone Jr             1\n",
+      "Keane, Miss. Nora A                         1\n",
+      "Dooley, Mr. Patrick                         1\n",
+      "Name: Name, Length: 891, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Sex': 2\n",
+      "Distinct values and their count for column 'Sex':\n",
+      "male      577\n",
+      "female    314\n",
+      "Name: Sex, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Age': 88\n",
+      "Distinct values and their count for column 'Age':\n",
+      "24.00    30\n",
+      "22.00    27\n",
+      "18.00    26\n",
+      "19.00    25\n",
+      "28.00    25\n",
+      "         ..\n",
+      "36.50     1\n",
+      "55.50     1\n",
+      "0.92      1\n",
+      "23.50     1\n",
+      "74.00     1\n",
+      "Name: Age, Length: 88, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'SibSp': 7\n",
+      "Distinct values and their count for column 'SibSp':\n",
+      "0    608\n",
+      "1    209\n",
+      "2     28\n",
+      "4     18\n",
+      "3     16\n",
+      "8      7\n",
+      "5      5\n",
+      "Name: SibSp, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Parch': 7\n",
+      "Distinct values and their count for column 'Parch':\n",
+      "0    678\n",
+      "1    118\n",
+      "2     80\n",
+      "5      5\n",
+      "3      5\n",
+      "4      4\n",
+      "6      1\n",
+      "Name: Parch, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Ticket': 681\n",
+      "Distinct values and their count for column 'Ticket':\n",
+      "347082      7\n",
+      "CA. 2343    7\n",
+      "1601        7\n",
+      "3101295     6\n",
+      "CA 2144     6\n",
+      "           ..\n",
+      "9234        1\n",
+      "19988       1\n",
+      "2693        1\n",
+      "PC 17612    1\n",
+      "370376      1\n",
+      "Name: Ticket, Length: 681, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Fare': 248\n",
+      "Distinct values and their count for column 'Fare':\n",
+      "8.0500     43\n",
+      "13.0000    42\n",
+      "7.8958     38\n",
+      "7.7500     34\n",
+      "26.0000    31\n",
+      "           ..\n",
+      "35.0000     1\n",
+      "28.5000     1\n",
+      "6.2375      1\n",
+      "14.0000     1\n",
+      "10.5167     1\n",
+      "Name: Fare, Length: 248, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Cabin': 147\n",
+      "Distinct values and their count for column 'Cabin':\n",
+      "B96 B98        4\n",
+      "G6             4\n",
+      "C23 C25 C27    4\n",
+      "C22 C26        3\n",
+      "F33            3\n",
+      "              ..\n",
+      "E34            1\n",
+      "C7             1\n",
+      "C54            1\n",
+      "E36            1\n",
+      "C148           1\n",
+      "Name: Cabin, Length: 147, dtype: int64\n",
+      "============================================================\n",
+      "Number of distinct elements for column 'Embarked': 3\n",
+      "Distinct values and their count for column 'Embarked':\n",
+      "S    644\n",
+      "C    168\n",
+      "Q     77\n",
+      "Name: Embarked, dtype: int64\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 看每一列分布情况\n",
+    "def first_look_data(train_data):\n",
+    "    for col in train_data.columns:\n",
+    "        print(f\"Number of distinct elements for column '{col}': {train_data[col].nunique()}\")\n",
+    "        print(f\"Distinct values and their count for column '{col}':\")\n",
+    "        print(train_data[col].value_counts())\n",
+    "        print(\"===\"*20)\n",
+    "\n",
+    "first_look_data(train_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
