--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -15,7 +15,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn import model_selection "
+    "from sklearn import model_selection \n",
+    "from sklearn import preprocessing\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import ensemble\n",
+    "from sklearn import metrics"
    ]
   },
   {
@@ -799,6 +803,136 @@
    ],
    "source": [
     "train_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "做完k-fold以及选择完metric，下一步做feature engineering\n",
+    "\n",
+    "先处理NA值\n",
+    "\n",
+    "1. 对类别值，第一种做法：mapping到数值上，labelEncoding =>适用于树形模型\n",
+    "2. 对类别值，第二种做法：直接用onehot 都能用，比上面的能多用于线性模型 liner regression and SVM， 对于多维的可以用 SVD降维\n",
+    "3. 还有种做法：用embedding。\n",
+    "\n",
+    "对于在训练集中出现很少，或者几乎不出现的，但是测试集中却有很多的类别，需要特殊考虑。例如将测试集加到一起做label encoding or onehot， 或者新加一类unknown。等等\n",
+    "\n",
+    "特征选择\n",
+    "以及特种组合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_cols = [\n",
+    "    \"Pclass\",\n",
+    "    \"Age\",\n",
+    "    \"SibSp\",\n",
+    "    \"Parch\",\n",
+    "    \"Fare\"\n",
+    "]\n",
+    "\n",
+    "features = [\n",
+    "    f for f in train_data.columns if f not in (\"kfold\", \"Survived\", \"PassengerId\")\n",
+    "]\n",
+    "\n",
+    "for col in features:\n",
+    "    # do not encode the numerical columns\n",
+    "    if col not in num_cols:\n",
+    "        train_data.loc[:, col] = train_data[col].astype(str).fillna(\"NONE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
+      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
+      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
+      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
+      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import ensemble\n",
+    "from sklearn import metrics\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import ensemble\n",
+    "from sklearn import metrics\n",
+    "from sklearn import preprocessing\n",
+    "from scipy import sparse\n",
+    "from sklearn import decomposition\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "# initialize LabelEncoder for each feature column\n",
+    "lbl = preprocessing.LabelEncoder()\n",
+    "\n",
+    "# now its time to label encode the features\n",
+    "for col in features:\n",
+    "    if col not in num_cols:\n",
+    "\n",
+    "        # fit label encoder on all data\n",
+    "        lbl.fit(train_data[col])\n",
+    "        # transform all the data\n",
+    "        train_data.loc[:, col] = lbl.transform(train_data[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold = 0, AUC = 0.8591567852437418\n"
+     ]
+    }
+   ],
+   "source": [
+    "fold = 0\n",
+    "# get training data using folds\n",
+    "df_train = train_data[train_data.kfold != fold].reset_index(drop=True)\n",
+    "# get validation data using folds\n",
+    "df_valid = train_data[train_data.kfold == fold].reset_index(drop=True)\n",
+    "\n",
+    "# get training data\n",
+    "x_train = df_train[features].values\n",
+    "# get validation data\n",
+    "x_valid = df_valid[features].values\n",
+    "\n",
+    "# initialize Logistic Regression model\n",
+    "model = xgb.XGBClassifier(n_jobs=-1, max_depth=7, n_estimators=200)\n",
+    "# fit model on training data (ohe)\n",
+    "model.fit(x_train, df_train.Survived.values)\n",
+    "# predict on validation data\n",
+    "# we need the probability values as we are calculating AUC\n",
+    "# we will use the probability of 1s\n",
+    "valid_preds = model.predict_proba(x_valid)[:, 1]\n",
+    "# get roc auc score\n",
+    "auc = metrics.roc_auc_score(df_valid.Survived.values, valid_preds)\n",
+    "# print auc\n",
+    "print(f\"Fold = {fold}, AUC = {auc}\")\n",
+    "    "
    ]
   }
  ],
