--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,51 +824,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "num_cols = [\n",
-    "    \"Pclass\",\n",
-    "    \"Age\",\n",
-    "    \"SibSp\",\n",
-    "    \"Parch\",\n",
-    "    \"Fare\"\n",
-    "]\n",
+    "k-fold 的作用是用来选择好的模型，确保模型在各种情况都有很好的泛化能力。比如直接按80%/20%划分，万一很难预测的都在20%里，就无法衡量模型的能力。\n",
     "\n",
-    "features = [\n",
-    "    f for f in train_data.columns if f not in (\"kfold\", \"Survived\", \"PassengerId\")\n",
-    "]\n",
+    "最终是将选择好的模型，用所有的数据去train，然后用来预测。\n",
+    "https://stats.stackexchange.com/questions/52274/how-to-choose-a-predictive-model-after-k-fold-cross-validation\n",
+    "https://scikit-learn.org/stable/modules/cross_validation.html\n",
     "\n",
-    "for col in features:\n",
-    "    # do not encode the numerical columns\n",
-    "    if col not in num_cols:\n",
-    "        train_data.loc[:, col] = train_data[col].astype(str).fillna(\"NONE\")"
+    "## 问题： 如何选择K？\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
-      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
-      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
-      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n",
-      "/tmp/ipykernel_7024/3747505250.py:23: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  train_data.loc[:, col] = lbl.transform(train_data[col])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
     "from sklearn import linear_model\n",
@@ -882,57 +854,81 @@
     "from sklearn import decomposition\n",
     "import xgboost as xgb\n",
     "\n",
-    "# initialize LabelEncoder for each feature column\n",
-    "lbl = preprocessing.LabelEncoder()\n",
+    "def run(fold):\n",
+    "    train_data = pd.read_csv(\"./dataset/train_folds.csv\")\n",
+    "    num_cols = [\n",
+    "        \"Pclass\",\n",
+    "        \"Age\",\n",
+    "        \"SibSp\",\n",
+    "        \"Parch\",\n",
+    "        \"Fare\"\n",
+    "    ]\n",
     "\n",
-    "# now its time to label encode the features\n",
-    "for col in features:\n",
-    "    if col not in num_cols:\n",
+    "    features = [\n",
+    "        f for f in train_data.columns if f not in (\"kfold\", \"Survived\", \"PassengerId\")\n",
+    "    ]\n",
     "\n",
-    "        # fit label encoder on all data\n",
-    "        lbl.fit(train_data[col])\n",
-    "        # transform all the data\n",
-    "        train_data.loc[:, col] = lbl.transform(train_data[col])"
+    "    for col in features:\n",
+    "        # do not encode the numerical columns\n",
+    "        if col not in num_cols:\n",
+    "            train_data[col] = train_data[col].astype(str).fillna(\"NONE\")\n",
+    "\n",
+    "    # initialize LabelEncoder for each feature column\n",
+    "    lbl = preprocessing.LabelEncoder()\n",
+    "\n",
+    "    # now its time to label encode the features\n",
+    "    for col in features:\n",
+    "        if col not in num_cols:\n",
+    "\n",
+    "            # fit label encoder on all data\n",
+    "            lbl.fit(train_data[col])\n",
+    "            # transform all the data\n",
+    "            train_data[col] = lbl.transform(train_data[col])\n",
+    "\n",
+    "    # get training data using folds\n",
+    "    df_train = train_data[train_data.kfold != fold].reset_index(drop=True)\n",
+    "    # get validation data using folds\n",
+    "    df_valid = train_data[train_data.kfold == fold].reset_index(drop=True)\n",
+    "\n",
+    "    # get training data\n",
+    "    x_train = df_train[features].values\n",
+    "    # get validation data\n",
+    "    x_valid = df_valid[features].values\n",
+    "\n",
+    "    # initialize Logistic Regression model\n",
+    "    model = xgb.XGBClassifier(n_jobs=-1, max_depth=7, n_estimators=200)\n",
+    "    # fit model on training data (ohe)\n",
+    "    model.fit(x_train, df_train.Survived.values)\n",
+    "    # predict on validation data\n",
+    "    # we need the probability values as we are calculating AUC\n",
+    "    # we will use the probability of 1s\n",
+    "    valid_preds = model.predict_proba(x_valid)[:, 1]\n",
+    "    # get roc auc score\n",
+    "    auc = metrics.roc_auc_score(df_valid.Survived.values, valid_preds)\n",
+    "    # print auc\n",
+    "    print(f\"Fold = {fold}, AUC = {auc}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold = 0, AUC = 0.8591567852437418\n"
+      "Fold = 0, AUC = 0.8591567852437418\n",
+      "Fold = 1, AUC = 0.8430481283422461\n",
+      "Fold = 2, AUC = 0.9012032085561498\n",
+      "Fold = 3, AUC = 0.8684491978609625\n",
+      "Fold = 4, AUC = 0.8772769578513495\n"
      ]
     }
    ],
    "source": [
-    "fold = 0\n",
-    "# get training data using folds\n",
-    "df_train = train_data[train_data.kfold != fold].reset_index(drop=True)\n",
-    "# get validation data using folds\n",
-    "df_valid = train_data[train_data.kfold == fold].reset_index(drop=True)\n",
-    "\n",
-    "# get training data\n",
-    "x_train = df_train[features].values\n",
-    "# get validation data\n",
-    "x_valid = df_valid[features].values\n",
-    "\n",
-    "# initialize Logistic Regression model\n",
-    "model = xgb.XGBClassifier(n_jobs=-1, max_depth=7, n_estimators=200)\n",
-    "# fit model on training data (ohe)\n",
-    "model.fit(x_train, df_train.Survived.values)\n",
-    "# predict on validation data\n",
-    "# we need the probability values as we are calculating AUC\n",
-    "# we will use the probability of 1s\n",
-    "valid_preds = model.predict_proba(x_valid)[:, 1]\n",
-    "# get roc auc score\n",
-    "auc = metrics.roc_auc_score(df_valid.Survived.values, valid_preds)\n",
-    "# print auc\n",
-    "print(f\"Fold = {fold}, AUC = {auc}\")\n",
-    "    "
+    "for i in range(0, 5):\n",
+    "    run(i)"
    ]
   }
  ],
