--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -933,10 +933,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def run_all_data():\n",
+    "    train_data = pd.read_csv(\"./dataset/train.csv\")\n",
+    "    test_data = pd.read_csv(\"./dataset/test.csv\")\n",
+    "    num_cols = [\n",
+    "        \"Pclass\",\n",
+    "        \"Age\",\n",
+    "        \"SibSp\",\n",
+    "        \"Parch\",\n",
+    "        \"Fare\"\n",
+    "    ]\n",
+    "\n",
+    "    features = [\n",
+    "        f for f in train_data.columns if f not in (\"Survived\", \"PassengerId\")\n",
+    "    ]\n",
+    "\n",
+    "    for col in features:\n",
+    "        # do not encode the numerical columns\n",
+    "        if col not in num_cols:\n",
+    "            train_data[col] = train_data[col].astype(str).fillna(\"NONE\")\n",
+    "\n",
+    "    # initialize LabelEncoder for each feature column\n",
+    "    lbl = preprocessing.LabelEncoder()\n",
+    "\n",
+    "    # now its time to label encode the features\n",
+    "    for col in features:\n",
+    "        if col not in num_cols:\n",
+    "\n",
+    "            # fit label encoder on all data\n",
+    "            lbl.fit(train_data[col])\n",
+    "            # transform all the data\n",
+    "            train_data[col] = lbl.transform(train_data[col])\n",
+    "\n",
+    "    # get training data using folds\n",
+    "    df_train = train_data.reset_index(drop=True)\n",
+    "    # get validation data using folds\n",
+    "    df_valid = test_data\n",
+    "\n",
+    "    # get training data\n",
+    "    x_train = df_train[features].values\n",
+    "    # get validation data\n",
+    "    x_valid = df_valid[features].values\n",
+    "\n",
+    "    # initialize Logistic Regression model\n",
+    "    model = xgb.XGBClassifier(n_jobs=-1, max_depth=7, n_estimators=200)\n",
+    "    # fit model on training data (ohe)\n",
+    "    model.fit(x_train, df_train.Survived.values)\n",
+    "    # predict on validation data\n",
+    "    # we need the probability values as we are calculating AUC\n",
+    "    # we will use the probability of 1s\n",
+    "    valid_preds = model.predict_proba(x_valid)\n",
+    "    # get roc auc score\n",
+    "    valid_preds.to_csv(\"./dataset/predict.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = pd.read_csv(\"./dataset/train.csv\")\n",
+    "test_data = pd.read_csv(\"./dataset/test.csv\")\n",
+    "num_cols = [\n",
+    "    \"Pclass\",\n",
+    "    \"Age\",\n",
+    "    \"SibSp\",\n",
+    "    \"Parch\",\n",
+    "    \"Fare\"\n",
+    "]\n",
+    "\n",
+    "features = [\n",
+    "    f for f in train_data.columns if f not in (\"Survived\", \"PassengerId\")\n",
+    "]\n",
+    "\n",
+    "for col in features:\n",
+    "    # do not encode the numerical columns\n",
+    "    if col not in num_cols:\n",
+    "        train_data[col] = train_data[col].astype(str).fillna(\"NONE\")\n",
+    "        test_data[col] = test_data[col].astype(str).fillna(\"NONE\")\n",
+    "\n",
+    "# initialize LabelEncoder for each feature column\n",
+    "lbl = preprocessing.LabelEncoder()\n",
+    "\n",
+    "# now its time to label encode the features\n",
+    "for col in features:\n",
+    "    if col not in num_cols:\n",
+    "\n",
+    "        # fit label encoder on all data\n",
+    "        lbl.fit(train_data[col])\n",
+    "        # transform all the data\n",
+    "        train_data[col] = lbl.transform(train_data[col])\n",
+    "\n",
+    "# initialize LabelEncoder for each feature column\n",
+    "lbl_test = preprocessing.LabelEncoder()\n",
+    "\n",
+    "# now its time to label encode the features\n",
+    "for col in features:\n",
+    "    if col not in num_cols:\n",
+    "\n",
+    "        # fit label encoder on all data\n",
+    "        lbl_test.fit(test_data[col])\n",
+    "        # transform all the data\n",
+    "        test_data[col] = lbl_test.transform(test_data[col])\n",
+    "\n",
+    "\n",
+    "# get training data using folds\n",
+    "df_train = train_data.reset_index(drop=True)\n",
+    "# get validation data using folds\n",
+    "df_valid = test_data\n",
+    "\n",
+    "# get training data\n",
+    "x_train = df_train[features].values\n",
+    "# get validation data\n",
+    "x_valid = df_valid[features].values\n",
+    "\n",
+    "# initialize Logistic Regression model\n",
+    "model = xgb.XGBClassifier(n_jobs=-1, max_depth=7, n_estimators=200)\n",
+    "# fit model on training data (ohe)\n",
+    "model.fit(x_train, df_train.Survived.values)\n",
+    "# predict on validation data\n",
+    "# we need the probability values as we are calculating AUC\n",
+    "# we will use the probability of 1s\n",
+    "valid_preds = model.predict(x_valid)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = pd.read_csv(\"./dataset/test.csv\")\n",
+    "predict.loc[:, 'Survived'] = valid_preds\n",
+    "predict[[\"PassengerId\", \"Survived\"]].to_csv(\"./dataset/predict.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
