--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -317,6 +317,212 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>714.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>446.000000</td>\n",
+       "      <td>0.383838</td>\n",
+       "      <td>2.308642</td>\n",
+       "      <td>445.000000</td>\n",
+       "      <td>0.647587</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0.523008</td>\n",
+       "      <td>0.381594</td>\n",
+       "      <td>338.528620</td>\n",
+       "      <td>32.204208</td>\n",
+       "      <td>130.744108</td>\n",
+       "      <td>1.538721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>257.353842</td>\n",
+       "      <td>0.486592</td>\n",
+       "      <td>0.836071</td>\n",
+       "      <td>257.353842</td>\n",
+       "      <td>0.477990</td>\n",
+       "      <td>14.526497</td>\n",
+       "      <td>1.102743</td>\n",
+       "      <td>0.806057</td>\n",
+       "      <td>200.850657</td>\n",
+       "      <td>49.693429</td>\n",
+       "      <td>36.024237</td>\n",
+       "      <td>0.794231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.420000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>223.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>222.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.125000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>158.500000</td>\n",
+       "      <td>7.910400</td>\n",
+       "      <td>147.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>446.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>445.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>337.000000</td>\n",
+       "      <td>14.454200</td>\n",
+       "      <td>147.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>668.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>667.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>519.500000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>147.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>890.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>680.000000</td>\n",
+       "      <td>512.329200</td>\n",
+       "      <td>147.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PassengerId    Survived      Pclass        Name         Sex  \\\n",
+       "count   891.000000  891.000000  891.000000  891.000000  891.000000   \n",
+       "mean    446.000000    0.383838    2.308642  445.000000    0.647587   \n",
+       "std     257.353842    0.486592    0.836071  257.353842    0.477990   \n",
+       "min       1.000000    0.000000    1.000000    0.000000    0.000000   \n",
+       "25%     223.500000    0.000000    2.000000  222.500000    0.000000   \n",
+       "50%     446.000000    0.000000    3.000000  445.000000    1.000000   \n",
+       "75%     668.500000    1.000000    3.000000  667.500000    1.000000   \n",
+       "max     891.000000    1.000000    3.000000  890.000000    1.000000   \n",
+       "\n",
+       "              Age       SibSp       Parch      Ticket        Fare       Cabin  \\\n",
+       "count  714.000000  891.000000  891.000000  891.000000  891.000000  891.000000   \n",
+       "mean    29.699118    0.523008    0.381594  338.528620   32.204208  130.744108   \n",
+       "std     14.526497    1.102743    0.806057  200.850657   49.693429   36.024237   \n",
+       "min      0.420000    0.000000    0.000000    0.000000    0.000000    0.000000   \n",
+       "25%     20.125000    0.000000    0.000000  158.500000    7.910400  147.000000   \n",
+       "50%     28.000000    0.000000    0.000000  337.000000   14.454200  147.000000   \n",
+       "75%     38.000000    1.000000    0.000000  519.500000   31.000000  147.000000   \n",
+       "max     80.000000    8.000000    6.000000  680.000000  512.329200  147.000000   \n",
+       "\n",
+       "         Embarked  \n",
+       "count  891.000000  \n",
+       "mean     1.538721  \n",
+       "std      0.794231  \n",
+       "min      0.000000  \n",
+       "25%      1.000000  \n",
+       "50%      2.000000  \n",
+       "75%      2.000000  \n",
+       "max      3.000000  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
